Fix Overlapping of grid items

--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,21 @@
 :root {
     --grid-cols: 1;
     --grid-rows: 1;
+    
+}
+
+body {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
 }
 
 div.parent {
     width: 968px;
+    height: auto;
     display: grid;
-    grid-gap: 1em;
     grid-template-rows: repeat(var(--grid-rows), 1fr);
     grid-template-columns: repeat(var(--grid-cols), 1fr);
 
@@ -14,8 +23,7 @@ div.parent {
 }
 
 .box {
-    height: 50px;
-    width: 50px;
-    border: 2px solid black;
+    aspect-ratio: 1;
     background-color: blue;
+    border: 1px solid black;
 }
